[project]
name = "async_pubsub"
version = "0.1"
description = "async pubsub"
requires-python = ">=3.11"
dependencies = []
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Nanahuse/async_pubsub"


[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0"]

[tool.black]
line-length = 120
