[project]
name = "async_pubsub"
version = "0.1.0"
description = "async pubsub"
requires-python = ">=3.11"
dependencies = []
license = { file = "LICENSE" }
authors = [{ name = "Nanahuse" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Nanahuse/async_pubsub"


[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0"]

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["S101", "D"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.per-file-ignores]
"test/*" = ["ANN201", "INP001"]
